Moved box-sizing to global rules(*) to fix weird, uneven gap on the left of the page

--- a/homepage.less
+++ b/homepage.less
@@ -20,6 +20,7 @@
   margin: 0;
   padding: 0;
   font-family: @font-main;
+  box-sizing: border-box;
 }
 
 .main-container {
